traces/bug_625.txt
src/femlib/fem.cpp:874: error: DEAD_STORE
  The value written to &lmx (type double) is never used.
Showing all 1 steps of the trace


src/femlib/fem.cpp:874:31: Write of unused value
872.       R lmx=lambda[0];
873.       if (lmx<lambda[1])  jj=1, lmx=lambda[1];
874.       if (lmx<lambda[2])  jj=2, lmx=lambda[2];
                                     ^
875.       if(lambda[0]<0) lambda[jj] += lambda[0],lambda[0]=0;
876.       if(lambda[1]<0) lambda[jj] += lambda[1],lambda[1]=0;
